public class Figure {
    private String name;

    protected Figure(String name) {
        this.name = name;
    }
}
